tests/error/poly_errors/non_linear4.err
Error: Expected a droppable type (at $FILE:14:8)
   | 
12 | @guppy
13 | def main(q: qubit) -> None:
14 |     foo(q)
   |         ^ Expected a droppable type, got type `qubit` which is not
   |           implicitly droppable

Guppy compilation failed due to 1 previous error
